# Cube-Decal

./: CMakeLists.txt  config.json
include/: AnimationManager.hpp  Color.hpp  ConfigManager.hpp  Cube.hpp  Geometry.hpp  Homography.hpp  Image.hpp  Logger.hpp  Math.hpp  Matrix.hpp  Renderer.hpp  TextureMappingUtils.hpp  ViewCamera.hpp
src/: AnimationManager.cpp  Color.cpp  ConfigManager.cpp  Cube.cpp  Geometry.cpp  Homography.cpp  Image.cpp  Logger.cpp  Math.cpp  Matrix.cpp  Renderer.cpp  TextureMappingUtils.cpp  ViewCamera.cpp  main.cpp
